# django-urlqueryset

./: .gitignore  pyproject.toml  setup.py
django_urlqueryset/: __init__.py  apps.py  models.py  urlqueryset.py
requirements/: base.txt  devel.txt
tests/: conftest.py  models.py  settings.py  test_urlmodel.py  test_urlqueryset.py
